sample/retrieveUnpackaged/objects/ABNote_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Store the server name &amp; default parameters for ABNote, used for invoking the display of a PDF bill</description>
    <fields>
        <fullName>ABNote_Base64_String__c</fullName>
        <description>The unique ABNote ID parameter used in the URL generation (is passed in as the ID= paramater). Is *not* used for encryption or certificate signing.</description>
        <label>ABNote Base64 String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AES_Key__c</fullName>
        <label>AES Key (encryption)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Key_Pt1__c</fullName>
        <description>Private key for the certificate signature, part 1</description>
        <label>Certificate Key Pt1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Key_Pt2__c</fullName>
        <description>Private key for the certificate signature, part 2</description>
        <label>Certificate Key Pt2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Key_Pt3__c</fullName>
        <description>Private key for the certificate signature, part 3</description>
        <label>Certificate Key Pt3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Server_Base_URL__c</fullName>
        <description>Base URL for ABNote</description>
        <inlineHelpText>Base URL for ABNote</inlineHelpText>
        <label>Server Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ABNote Settings</label>
</CustomObject>